Add additional topics for advance JVM into JVM.md file - Trisha